make all assets local

--- a/public/secondary.html
+++ b/public/secondary.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" crossorigin="anonymous">
 
     
-    <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+    <script src="assets/js/jquery-2.2.4.min.js"></script>
 
     <link rel="stylesheet" href="assets/css/app.css">
 
@@ -23,7 +20,7 @@
     <div class="intro">
         <figure 
             class="intro-video lazyload bg-video" 
-            data-bg="https://unioncowork.com/content/uploads/2017/03/home_vid_still-7.jpg" 
+            data-bg="assets/images/home_vid_still-7.jpg" 
             width="1280" 
             height="720" 
             style="background-color: rgb( 237,233,230);" 
