--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
     <div class="t">
     	<div class="tc">
             <div class="row video-controls">
-                <div class="col-xs-4"><a href="#vid-1" class="btn btn-lg btn-block btn-primary">Mountains</a></div>
-                <div class="col-xs-4"><a href="#vid-2" class="btn btn-lg btn-block btn-primary">Waterfalls</a></div>
-                <div class="col-xs-4"><a href="#vid-3" class="btn btn-lg btn-block btn-primary">Beaches</a></div>
+                <div class="col-xs-4"><a href="#vid-1" class="btn btn-lg btn-block btn-primary"></a></div>
+                <div class="col-xs-4"><a href="#vid-2" class="btn btn-lg btn-block btn-primary"></a></div>
+                <div class="col-xs-4"><a href="#vid-3" class="btn btn-lg btn-block btn-primary"></a></div>
             </div>
     	</div>
     </div>
